Change the documentation link to the correct URL.

--- a/editor/templates/design/header/left.html
+++ b/editor/templates/design/header/left.html
@@ -1,5 +1,5 @@
 {% load i18n %}
-<a class="navbar-item" href="https://erbsland.dev/" target="_blank">
+<a class="navbar-item" href="https://erbsland-dev.github.io/erbsland-former/" target="_blank">
     <span class="icon-text">
         <span class="icon">
             <i class="fas fa-book"></i>
