Improvements, Bugfixes and a User Management UI
- Adding basic user management.
    - Adding a basic user management UI. Allow adding, changing, deleting users and reset passwords.
    - Adding `add_admin` management command.
    - Fixing `can_user_edit` to actually match the editors (even this feature isn't implemented yet.)
    - Fixing the view structure with a central "home" and an admin and user area.
    - Fixing breadcrumbs for the new structure.
    - Make the login button on the welcome screen bigger.
    - Remove the now obsolete django admin views.
- Protecting the `reset_test_db` command.
    - Prevent `reset_test_db` from being used when not in debug mode.
    - Adding the required argument `--erase_database` as additional protection for the curious admin.
- Fixing the wrong service type.
    - Changing in the service type to `simple` in the background service example file `erbsland-former.service`.

--- a/design/templates/design/header/right.html
+++ b/design/templates/design/header/right.html
@@ -6,9 +6,17 @@
             <a class="navbar-link is-arrowless">
                 <span class="icon-text">
                     <span class="icon">
-                        <i class="fa-solid fa-user"></i>
+                        {% if user.is_staff %}
+                            <i class="fas fa-user-tie"></i>
+                        {% else %}
+                            <i class="fas fa-user"></i>
+                        {% endif %}
                     </span>
-                    <span>{{ user.username }}</span>
+                    {% if user.first_name %}
+                        <span>{{ user.first_name }}</span>
+                    {% else %}
+                        <span>{{ user.username }}</span>
+                    {% endif %}
                 </span>
             </a>
             <div class="navbar-dropdown is-right">
