--- a/design/templates/design/breadcrumbs/home.html
+++ b/design/templates/design/breadcrumbs/home.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 <a href="{% url 'home' %}">
-    {% if not is_settings_page %}
+    {% if is_home %}
         <span class="icon is-small"><i class="fas fa-home" aria-hidden="true"></i></span>
         <span>{% translate 'Home' %}</span>
     {% else %}
