Extending the Documentation and Administration
- Adding a new `list_extensions` management command.
- Add cleanup to all background task actions.
- Adding more documentation.
- Adding a task check for the delete user action.
- Removing the `is_active` field from user details.
- Increasing version number.

--- a/editor/templates/editor/admin/user_card.html
+++ b/editor/templates/editor/admin/user_card.html
@@ -84,7 +84,7 @@
                         </a>
                         {% endif %}
                         <hr class="dropdown-divider">
-                        <a class="dropdown-item has-text-danger" {% if user.is_superuser and not user.username == user_entry.username %}href="{% url "admin_user_edit" pk=user_entry.pk %}" {% else %}disabled{% endif %}>
+                        <a class="dropdown-item has-text-danger" {% if user.is_superuser and not user.username == user_entry.username %}href="{% url "admin_user_delete" pk=user_entry.pk %}" {% else %}disabled{% endif %}>
                             <span class="icon-text">
                                 <span class="icon">
                                     <i class="fa-solid fa-trash"></i>
