--- a/editor/templates/editor/project/card.html
+++ b/editor/templates/editor/project/card.html
@@ -1,5 +1,5 @@
-{% load i18n humanize %}
-<div class="column is-full-mobile is-3-fullhd is-4-desktop is-6-tablet">
+{% load i18n humanize js_triggers %}
+<div class="column is-full-mobile is-3-fullhd is-4-desktop is-6-tablet" style="min-width: 400px;">
     <div class="card">
         <header class="card-header has-background-dark has-text-text-invert">
             <h1 class="card-header-title has-text-text-invert" title="{{ project.name }}">
@@ -53,15 +53,7 @@
             </div>
         </div>
         <footer class="card-footer">
-            <a class="card-footer-item" href="{% url 'project_delete' pk=project.pk %}">
-                <span class="icon-text">
-                    <span class="icon">
-                        <i class="fa-solid fa-trash"></i>
-                    </span>
-                    <span>{% translate 'Delete' %}</span>
-                </span>
-            </a>
-            <a class="card-footer-item" href="{% url 'project' pk=project.pk %}">
+            <a class="card-footer-item" {% action_button_trigger "edit" project.pk %} style="flex-grow: 10;">
                 <span class="icon-text">
                     <span class="icon">
                         <i class="fa-solid fa-edit"></i>
@@ -69,6 +61,44 @@
                     <span>{% translate 'Edit' %}</span>
                 </span>
             </a>
+            <div class="card-footer-item dropdown is-hoverable is-up is-right">
+                <div class="dropdown-trigger">
+                    <a class="block" aria-haspopup="true" aria-controls="card-dropdown-{{ project.pk }}">
+                        <span class="icon is-small">
+                            <i class="fas fa-ellipsis-vertical" aria-hidden="true"></i>
+                        </span>
+                    </a>
+                </div>
+                <div class="dropdown-menu" id="card-dropdown-{{ project.pk }}" role="menu">
+                    <div class="dropdown-content mr-3">
+                        <a class="dropdown-item has-text-danger" {% action_button_trigger "delete" project.pk %}>
+                            <span class="icon-text">
+                                <span class="icon">
+                                    <i class="fa-solid fa-trash"></i>
+                                </span>
+                                <span>{% translate 'Delete' %}</span>
+                            </span>
+                        </a>
+                        <hr class="dropdown-divider">
+                        <a class="dropdown-item" {% action_button_trigger "rename" project.pk %}>
+                            <span class="icon-text">
+                                <span class="icon">
+                                    <i class="fa-solid fa-pen"></i>
+                                </span>
+                                <span>{% translate 'Rename' %}</span>
+                            </span>
+                        </a>
+                        <a class="dropdown-item" {% action_button_trigger "edit" project.pk %}>
+                            <span class="icon-text">
+                                <span class="icon">
+                                    <i class="fa-solid fa-edit"></i>
+                                </span>
+                                <span>{% translate 'Edit' %}</span>
+                            </span>
+                        </a>
+                    </div>
+                </div>
+            </div>
         </footer>
     </div>
 </div>
